fix contrast

--- a/workspace/documentation/src/app.css
+++ b/workspace/documentation/src/app.css
@@ -47,5 +47,6 @@ body {
 }
 
 a {
-	color: var(--mrq-primary);
+	/* color: var(--mrq-primary); */
+	color: #34aeff;
 }
